src/objects/User_Feedback2__c.object
<CustomObject>
    <description>Object to take defects, suggestions, ideas, access changes directly from end users.</description>
    <fields>
        <fullName>Additional_Instructions__c</fullName>
        <defaultValue>&quot;Include the section of the SOP and the impacted step(s), if applicable.&quot;</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <label>Additional Instructions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <formula>IF(
  ISPICKVAL(Status__c , &quot;Closed&quot;),  Date_Time_Closed__c - CreatedDate , 
  NOW() - CreatedDate 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Application__c</fullName>
        <description>Select the application which your request applies to.</description>
        <label>Application</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ACET</fullName>
                </value>
                <value>
                    <fullName>Legacy</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Category_Subtype__c</fullName>
        <description>Allows the user to select a subtype for their request.</description>
        <inlineHelpText>Select the category subtype for the type of submission.</inlineHelpText>
        <label>Category Subtype</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Category__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Clarification Needed</fullName>
                </value>
                <value>
                    <fullName>Dropdown Values</fullName>
                </value>
                <value>
                    <fullName>Entitlement/Milestones</fullName>
                </value>
                <value>
                    <fullName>Favorite Link</fullName>
                </value>
                <value>
                    <fullName>Missing Steps</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
                <value>
                    <fullName>Other (enter details in description)</fullName>
                </value>
                <value>
                    <fullName>Queue</fullName>
                </value>
                <value>
                    <fullName>Queue Assignment</fullName>
                </value>
                <value>
                    <fullName>Report/Dashboard</fullName>
                </value>
                <value>
                    <fullName>Role</fullName>
                    <label>Role Assignment</label>
                </value>
                <value>
                    <fullName>Routing Configuration</fullName>
                </value>
                <value>
                    <fullName>Supervisor Manager</fullName>
                </value>
                <value>
                    <fullName>Topic</fullName>
                </value>
                <value>
                    <fullName>Type/Subtype</fullName>
                </value>
                <value>
                    <fullName>User Permissions</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <description>Provides more granular description of submission for more efficient reporting and resolution.</description>
        <inlineHelpText>Specify the category for the type of submission.</inlineHelpText>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Add New</fullName>
                </value>
                <value>
                    <fullName>Application Slowness</fullName>
                </value>
                <value>
                    <fullName>Broken Link</fullName>
                </value>
                <value>
                    <fullName>Change Existing</fullName>
                </value>
                <value>
                    <fullName>Entitlement/Milestone</fullName>
                </value>
                <value>
                    <fullName>Error Message Help</fullName>
                </value>
                <value>
                    <fullName>Incorrect Case Routing</fullName>
                </value>
                <value>
                    <fullName>Missing SOP</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
                <value>
                    <fullName>Other (enter details in description)</fullName>
                </value>
                <value>
                    <fullName>Page Inconsistencies</fullName>
                </value>
                <value>
                    <fullName>Page Not Loading</fullName>
                </value>
                <value>
                    <fullName>Report/Dashboard Issues</fullName>
                </value>
                <value>
                    <fullName>SOP Related Question</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Closed_Reason__c</fullName>
        <description>Reason for Closed Status</description>
        <inlineHelpText>Reason for Closed Status</inlineHelpText>
        <label>Closed Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Added to Wish list</fullName>
                </value>
                <value>
                    <fullName>Additional Information Needed - No Response</fullName>
                </value>
                <value>
                    <fullName>Configuration Completed</fullName>
                </value>
                <value>
                    <fullName>Defect Captured</fullName>
                </value>
                <value>
                    <fullName>Defect Resolved (Internal)</fullName>
                </value>
                <value>
                    <fullName>Defect Resolved (Service Now)</fullName>
                </value>
                <value>
                    <fullName>Duplicate Submission</fullName>
                </value>
                <value>
                    <fullName>Enhancement Submitted/Feature Created</fullName>
                    <label>Enhancement Accepted/Backlogged</label>
                </value>
                <value>
                    <fullName>No Defect/Working as Designed</fullName>
                </value>
                <value>
                    <fullName>Not ACET Related</fullName>
                </value>
                <value>
                    <fullName>Question Answered</fullName>
                </value>
                <value>
                    <fullName>Request Cannot be Completed</fullName>
                </value>
                <value>
                    <fullName>SOP Updated</fullName>
                </value>
                <value>
                    <fullName>Currently Unable to Implement</fullName>
                    <label>Unable to Implement</label>
                </value>
                <value>
                    <fullName>Added to Enhancement Prioritization List</fullName>
                    <isActive>false</isActive>
                    <label>Added to Enhancement Prioritization List</label>
                </value>
                <value>
                    <fullName>Defect Discovered - Triage for Hotfix</fullName>
                    <isActive>false</isActive>
                    <label>Defect Discovered - Triage for Hotfix</label>
                </value>
                <value>
                    <fullName>Issue Resolved - No Triage</fullName>
                    <isActive>false</isActive>
                    <label>Issue Resolved - No Triage</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>Field for Business Enablement Users to document comments relative to the request.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Created_By_Email__c</fullName>
        <formula>CreatedBy.Email</formula>
        <label>Created By Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_By_Profile__c</fullName>
        <description>Indicates profile of the user who created the record.</description>
        <formula>CreatedBy.Profile_Name__c</formula>
        <inlineHelpText>The profile of the user who created the record.</inlineHelpText>
        <label>Created By Profile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_By_Role__c</fullName>
        <description>Indicates role of the user who created the record.</description>
        <formula>CreatedBy.Role_Name__c</formula>
        <inlineHelpText>The role of the user who created the record.</inlineHelpText>
        <label>Created By Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Time_Closed__c</fullName>
        <description>Date and Time record was closed</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Date/Time Closed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Field for end users to add description of their request</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Describe your feedback in detail.

Screenshots can be added on the next page.</inlineHelpText>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Description_of_Idea__c</fullName>
        <description>Idea for a future enhancement.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Include a detailed description of your idea along with a possible solution.</inlineHelpText>
        <label>Description of Idea</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Enter_Exact_Name_of_SOP__c</fullName>
        <description>Enter the the exact name of the SOP referenced in this User Feedback.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Enter Exact Name of SOP </label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Example__c</fullName>
        <description>This field may contain a member ID, provider ID, group ID, producer ID, claim number; invoice number, etc.</description>
        <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
        <inlineHelpText>This field may contain a member ID, provider ID, group ID, producer ID, claim number; invoice number, etc.</inlineHelpText>
        <label>Example</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Follow_Up_Date__c</fullName>
        <description>Follow up date for Business enablement team to track when to address user feedback next.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Follow Up Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Impacted_Constituent_Area_s__c</fullName>
        <label>Impacted Constituent Area(s)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Employer/Broker</fullName>
                </value>
                <value>
                    <fullName>Member</fullName>
                </value>
                <value>
                    <fullName>Provider</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Interaction_Type_s__c</fullName>
        <description>Allows users to enter which interaction type request pertains to</description>
        <inlineHelpText>Select the impacted interaction type(s)</inlineHelpText>
        <label>Interaction Type(s)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Group</fullName>
                </value>
                <value>
                    <fullName>Member</fullName>
                </value>
                <value>
                    <fullName>Producer</fullName>
                </value>
                <value>
                    <fullName>Provider</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Original_Ignite_Submission_Date__c</fullName>
        <description>Date of the submission of the original Ignite form.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Date of the submission of the original Ignite form.</inlineHelpText>
        <label>Original Ignite Submission Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Other_Page_s__c</fullName>
        <description>Picklist to select non-topic pages</description>
        <inlineHelpText>Select the non-topic page(s) that are impacted.</inlineHelpText>
        <label>Other Page(s)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Member Search</fullName>
                </value>
                <value>
                    <fullName>Member Details</fullName>
                </value>
                <value>
                    <fullName>Provider Search</fullName>
                </value>
                <value>
                    <fullName>Provider Details</fullName>
                </value>
                <value>
                    <fullName>Group Search</fullName>
                </value>
                <value>
                    <fullName>Group Details</fullName>
                </value>
                <value>
                    <fullName>Producer Search</fullName>
                </value>
                <value>
                    <fullName>Producer Details</fullName>
                </value>
                <value>
                    <fullName>Case Page</fullName>
                    <label>Case Details</label>
                </value>
                <value>
                    <fullName>Other (enter in description)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Other_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Allows user to enter the name of the person the request is for, if not themselves.</description>
        <inlineHelpText>This submission is on behalf of what user?</inlineHelpText>
        <label>Other User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>User_Feedback2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Page_Link__c</fullName>
        <description>Area for end users to paste a link to an ACET page</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Copy/Paste the browser URL for the page in which this submission is related.</inlineHelpText>
        <label>Page Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <description>Field for user to select priority of request</description>
        <inlineHelpText>Critical: Prevents ability to fully service constituent, no workaround 
High: High frequency, workaround exists w/major complexity 
Medium: Low frequency, workaround exists w/major complexity 
Low: Low frequency, workaround exists w/minor complexity</inlineHelpText>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Priority</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Record_Type_Name__c</fullName>
        <description>Hidden from layout.  Created for use of data loader extracts to avoid lookup of record type ID.</description>
        <formula>RecordType.DeveloperName</formula>
        <label>Record Type Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SOP_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter name of SOP/Process update is requested for</inlineHelpText>
        <label>SOP/Process Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Status of User Feedback Request</description>
        <inlineHelpText>New – Unassigned
Open – Assigned
In Review – Being reviewed 
In Resolution – Waiting to be completed
Pending Long-term Solution – Completion date TBD
Closed – Request complete</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>In Review</fullName>
                </value>
                <value>
                    <fullName>In Resolution</fullName>
                </value>
                <value>
                    <fullName>Pending Long-term Solution</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Submitted_for_Self__c</fullName>
        <description>Allows users to submit feedback on behalf of self or someone else.</description>
        <inlineHelpText>Is this feedback being submitted on behalf of your self or another individual?</inlineHelpText>
        <label>Submitted for Self?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <description>Allows users to enter the title for their submission</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter a brief title to name your submission.
Example: &quot;Provider Search Enhancement&quot;</inlineHelpText>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Topic_s__c</fullName>
        <description>Notates which inquire types will be affected by request</description>
        <inlineHelpText>Select the topic page(s) that are impacted.</inlineHelpText>
        <label>Topic Page(s)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Topic</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tracking__c</fullName>
        <description>Allows BE user to enter Rally user story, feature or defect number and Service Now Ticket number</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter Rally user story, feature or defect number or Service Now Ticket number</inlineHelpText>
        <label>Tracking #</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UF_Created_by_Me__c</fullName>
        <description>Field to determine if user is record creator.</description>
        <formula>IF( $User.Id  =  CreatedBy.Id, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>UF Created by Me</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Working_Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Working Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <label>User Feedback</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Record_Type_Name__c</columns>
        <columns>Title__c</columns>
        <columns>Status__c</columns>
        <columns>Closed_Reason__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <sharedTo>
            <group>Delegated_Administrators</group>
            <role>Oxford</role>
            <role>System_Administrator</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_User_Feedback</fullName>
        <columns>NAME</columns>
        <columns>Record_Type_Name__c</columns>
        <columns>Title__c</columns>
        <columns>Status__c</columns>
        <columns>Closed_Reason__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Age__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Follow_Up_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All User Feedback</label>
        <sharedTo>
            <group>Delegated_Administrators</group>
            <role>Oxford</role>
            <role>System_Administrator</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_User_Feedback_Provider</fullName>
        <columns>NAME</columns>
        <columns>Record_Type_Name__c</columns>
        <columns>Title__c</columns>
        <columns>Description__c</columns>
        <columns>Status__c</columns>
        <columns>Closed_Reason__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Created_By_Profile__c</field>
            <operation>equals</operation>
            <value>ACET Provider</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Closed</value>
        </filters>
        <label>Closed User Feedback - Provider</label>
        <sharedTo>
            <group>Delegated_Administrators</group>
            <role>Oxford</role>
            <role>Resolution_Specialist_Supervisor</role>
            <role>System_Administrator</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Business_Process_Team</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Category__c</columns>
        <columns>Category_Subtype__c</columns>
        <columns>Title__c</columns>
        <columns>Status__c</columns>
        <columns>Created_By_Profile__c</columns>
        <columns>Created_By_Role__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>User_Feedback2__c.Bright_Ideas,User_Feedback2__c.SOP_Updates</value>
        </filters>
        <label>Submitted Bright Ideas</label>
        <sharedTo>
            <group>Business_Process_Team</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_User_Feedback</fullName>
        <columns>NAME</columns>
        <columns>Record_Type_Name__c</columns>
        <columns>Title__c</columns>
        <columns>Status__c</columns>
        <columns>Closed_Reason__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>UF_Created_by_Me__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My User Feedback</label>
    </listViews>
    <listViews>
        <fullName>OpenIssues</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Category__c</columns>
        <columns>Category_Subtype__c</columns>
        <columns>Title__c</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>User_Feedback2__c.Issue</value>
        </filters>
        <label>Open Issues</label>
        <sharedTo>
            <group>Delegated_Administrators</group>
            <role>Oxford</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Open_User_Feedback</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Category__c</columns>
        <columns>Category_Subtype__c</columns>
        <columns>Title__c</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>notEqual</operation>
            <value>User_Feedback2__c.SOP_Updates</value>
        </filters>
        <label>Open User Feedback</label>
        <sharedTo>
            <group>Delegated_Administrators</group>
            <role>Oxford</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Submitted_Ideas</fullName>
        <columns>NAME</columns>
        <columns>Record_Type_Name__c</columns>
        <columns>Title__c</columns>
        <columns>Status__c</columns>
        <columns>Closed_Reason__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Record_Type_Name__c</field>
            <operation>equals</operation>
            <value>Idea</value>
        </filters>
        <label>Submitted Ideas</label>
        <sharedTo>
            <roleAndSubordinatesInternal>Oxford</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Submitted_Questions</fullName>
        <columns>NAME</columns>
        <columns>Record_Type_Name__c</columns>
        <columns>Title__c</columns>
        <columns>Status__c</columns>
        <columns>Closed_Reason__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Record_Type_Name__c</field>
            <operation>contains</operation>
            <value>Question</value>
        </filters>
        <label>Submitted Questions</label>
        <sharedTo>
            <roleAndSubordinatesInternal>Oxford</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Submitted_Requests</fullName>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>Age__c</columns>
        <columns>Status__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>Submitted Requests</label>
    </listViews>
    <listViews>
        <fullName>Submitted_SOP_Updates</fullName>
        <columns>NAME</columns>
        <columns>Category__c</columns>
        <columns>Category_Subtype__c</columns>
        <columns>SOP_Name__c</columns>
        <columns>Status__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>Created_By_Profile__c</columns>
        <columns>Created_By_Role__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>User_Feedback2__c.SOP_Updates</value>
        </filters>
        <label>Submitted SOP Updates</label>
        <sharedTo>
            <group>Business_Process_Team</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Unassigned_User_Feedback</fullName>
        <columns>NAME</columns>
        <columns>Record_Type_Name__c</columns>
        <columns>Category__c</columns>
        <columns>Category_Subtype__c</columns>
        <columns>Title__c</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>New</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>User_Feedback2__c.Idea,User_Feedback2__c.Question,User_Feedback2__c.Request</value>
        </filters>
        <label>Unassigned Open User Feedback</label>
        <sharedTo>
            <group>Delegated_Administrators</group>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>UF-{00000}</displayFormat>
        <label>User Feedback ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Feedback</pluralLabel>
    <recordTypes>
        <fullName>BEO_Feedback</fullName>
        <active>true</active>
        <description>BEO / ETSBE feedback requests</description>
        <label>BEO Feedback</label>
    </recordTypes>
    <recordTypes>
        <fullName>Bright_Ideas</fullName>
        <active>true</active>
        <description>Submit an idea for a potential future enhancement.</description>
        <label>Bright Ideas</label>
    </recordTypes>
    <recordTypes>
        <fullName>Idea</fullName>
        <active>true</active>
        <description>Submit an idea for a potential future ACET enhancement.</description>
        <label>Idea</label>
    </recordTypes>
    <recordTypes>
        <fullName>Issue</fullName>
        <active>false</active>
        <description>Submit an issue to report a technical glitch.</description>
        <label>Issue</label>
    </recordTypes>
    <recordTypes>
        <fullName>Question</fullName>
        <active>true</active>
        <description>Submit a question regarding the functionality of ACET.</description>
        <label>Question</label>
    </recordTypes>
    <recordTypes>
        <fullName>Request</fullName>
        <active>true</active>
        <description>Submit a request to add/change a configuration or user permissions for the ACET application.</description>
        <label>Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>SOP_Updates</fullName>
        <active>true</active>
        <description>Submit to have an SOP/Process updated or if you have a question about an SOP/Process.</description>
        <label>SOP/Process Update</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Bright_Ideas_SOP_saving_a_form</fullName>
        <active>false</active>
        <description>Only allows SOP &amp; Bright Ideas to be submitted by ACET Front Office agents</description>
        <errorConditionFormula>AND(
      OR(  RecordType.Name = &quot;Bright Ideas&quot;,
           RecordType.Name = &quot;SOP/Process Updates&quot;),
      NOT(OR(Created_By_Role__c = &quot;Benefit Advocate - Agent&quot;, Created_By_Role__c = &quot;Benefit Advocate - Manager&quot;, Created_By_Role__c = &quot;Asian Initiatives Member - Supervisor&quot;, Created_By_Role__c = &quot;Asian Initiatives Member - Agent&quot;, Created_By_Role__c = &quot;Benefit Advocate Customer Support Team - Supervisor&quot;, Created_By_Role__c = &quot;Benefit Advocate Customer Support Team - Agent&quot;, Created_By_Role__c = &quot;Resolution Specialist - Supervisor&quot;, Created_By_Role__c = &quot;Resolution Specialist - Agent&quot;, Created_By_Role__c = &quot;Provider Resolution Specialist - Supervisor&quot;, Created_By_Role__c = &quot;Provider Resolution Specialist - Agent&quot;, Created_By_Role__c = &quot;Resolution Specialist Customer Support Team - Supervisor &quot;, Created_By_Role__c = &quot;Resolution Specialist Customer Support Team - Agent&quot;, Created_By_Role__c = &quot;Asian Initiatives B&amp;E Call Center - Supervisor&quot;, Created_By_Role__c = &quot;Asian Initiatives B&amp;E Call Center - Agent&quot;, Created_By_Role__c = &quot;B&amp;E Call Center - Supervisor&quot;, Created_By_Role__c = &quot;B&amp;E Call Center - Agent&quot;, Created_By_Role__c = &quot;B&amp;E Call Center - Customer Support Team&quot;, Created_By_Role__c = &quot;BES Senior Resolution Specialist&quot;, Created_By_Role__c = &quot;CST Agent - EB/Email Team&quot;, Created_By_Role__c = &quot;DCSM/DGSA - Supervisor/SME&quot;, Created_By_Role__c = &quot;DCSM/DGSA - Agent&quot;, Created_By_Role__c = &quot;Benefit Advocate - Supervisor&quot;, Created_By_Role__c = &quot;B&amp;E Call Center/CST - Manager&quot;, Created_By_Role__c = &quot;DCSM/DGSA - Manager&quot;, Created_By_Role__c = &quot;Resolution Specialist - Manager&quot;))
)</errorConditionFormula>
        <errorMessage>You are not authorized to use this form.</errorMessage>
    </validationRules>
</CustomObject>